[gd_scene load_steps=12 format=2]

[ext_resource path="res://GUI/Themes/CyberTheme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/Menus/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://GUI/Menus/OptionsDetails.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/Menus/Instructions.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/Icons/godotIcon.png" type="Texture" id=5]
[ext_resource path="res://GUI/Icons/GimpLogowilber-big.png" type="Texture" id=6]
[ext_resource path="res://GUI/Icons/audacityIcon.png" type="Texture" id=7]
[ext_resource path="res://GUI/Icons/inkscapeIcon.png" type="Texture" id=8]
[ext_resource path="res://GUI/Icons/BlenderIcon.png" type="Texture" id=9]
[ext_resource path="res://effects/UISlide.wav" type="AudioStream" id=10]
[ext_resource path="res://effects/clickNoise.wav" type="AudioStream" id=11]

[node name="TitleScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -523.0
margin_top = -281.0
margin_right = 501.0
margin_bottom = 319.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0
custom_constants/hseparation = 100
tab_align = 0

[node name="Start" type="Tabs" parent="MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 55.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Panel" type="Panel" parent="MarginContainer/TabContainer/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="CenterContainer" parent="MarginContainer/TabContainer/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Start/MarginContainer"]
margin_left = 252.0
margin_top = 64.0
margin_right = 552.0
margin_bottom = 270.0
size_flags_horizontal = 4
custom_constants/separation = 30

[node name="RestartButton" type="Button" parent="MarginContainer/TabContainer/Start/MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 29.0
rect_min_size = Vector2( 300, 0 )
action_mode = 0
text = "Quick Play"

[node name="TutorialButton" type="Button" parent="MarginContainer/TabContainer/Start/MarginContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 300.0
margin_bottom = 88.0
text = "Tutorial"

[node name="CampaignButton" type="Button" parent="MarginContainer/TabContainer/Start/MarginContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 300.0
margin_bottom = 147.0
disabled = true
text = "Campaign (TBD)"

[node name="QuitButton" type="Button" parent="MarginContainer/TabContainer/Start/MarginContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 300.0
margin_bottom = 206.0
text = "Quit"

[node name="Instructions" parent="MarginContainer/TabContainer" instance=ExtResource( 4 )]
visible = false
margin_left = 10.0
margin_top = 55.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Licenses" type="Tabs" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 55.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Panel2" type="Panel" parent="MarginContainer/TabContainer/Licenses"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TabContainer/Licenses"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 15
custom_constants/margin_left = 30
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Licenses/MarginContainer"]
margin_left = 30.0
margin_top = 15.0
margin_right = 874.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Authoring" type="RichTextLabel" parent="MarginContainer/TabContainer/Licenses/MarginContainer/VBoxContainer"]
margin_right = 844.0
margin_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Planetary Rush was created by plexsoup. [url]https://plexsoup.itch.io[/url]
Source code available at [url]https://github.com/plexsoup[/url]

[center]Created for [url=https://itch.io/jam/mini-jam-24-space]Mini-Jam 24[/url][/center]

Thanks to Mr. Joshua McLean: Composer, Streamer, Active Member of the Game Jam Community. The music you're listening to is his piece, \"Hearts Unraveled\".
[indent]Contains music ©2019 Joshua McLean ([url]http://mrjoshuamclean.com[/url])
Licensed under Creative Commons Attribution-ShareAlike 4.0 International[/indent]

Software Used: 
[center][url=https://www.godotengine.org]Godot[/url], [url=https://www.gimp.org]Gimp[/url], [url=http://www.audacityteam.org]Audacity[/url], [url=https://www.inkscape.org]Inkscape[/url], [url=https://www.blender.org]Blender[/url][/center]

"
text = "Planetary Rush was created by plexsoup. https://plexsoup.itch.io
Source code available at https://github.com/plexsoup

Created for Mini-Jam 24

Thanks to Mr. Joshua McLean: Composer, Streamer, Active Member of the Game Jam Community. The music you're listening to is his piece, \"Hearts Unraveled\".
	Contains music ©2019 Joshua McLean (http://mrjoshuamclean.com)
Licensed under Creative Commons Attribution-ShareAlike 4.0 International

Software Used: 
Godot, Gimp, Audacity, Inkscape, Blender

"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/TabContainer/Licenses/MarginContainer/VBoxContainer"]
margin_left = 254.0
margin_top = 341.0
margin_right = 590.0
margin_bottom = 405.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8
columns = 5

[node name="GodotLogo" type="TextureButton" parent="MarginContainer/TabContainer/Licenses/MarginContainer/VBoxContainer/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 5 )
expand = true

[node name="GimpLogo" type="TextureButton" parent="MarginContainer/TabContainer/Licenses/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 6 )
expand = true

[node name="AudacityLogo" type="TextureButton" parent="MarginContainer/TabContainer/Licenses/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 7 )
expand = true

[node name="InkscapeLogo" type="TextureButton" parent="MarginContainer/TabContainer/Licenses/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 8 )
expand = true

[node name="BlenderLogo" type="TextureButton" parent="MarginContainer/TabContainer/Licenses/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 9 )
expand = true

[node name="Options" type="Tabs" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 55.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Panel3" type="Panel" parent="MarginContainer/TabContainer/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/TabContainer/Options/Panel3"]
margin_left = 10.0
margin_top = 10.0
margin_right = 894.0
margin_bottom = 425.0

[node name="OptionsDetails" parent="MarginContainer/TabContainer/Options/Panel3/VBoxContainer2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 884.0
margin_bottom = 308.0

[node name="HSplitContainer2" type="HSplitContainer" parent="MarginContainer/TabContainer/Options/Panel3/VBoxContainer2"]
margin_top = 312.0
margin_right = 884.0
margin_bottom = 381.0
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TabContainer/Options/Panel3/VBoxContainer2/HSplitContainer2"]
margin_right = 436.0
margin_bottom = 69.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="LeftSide" type="VBoxContainer" parent="MarginContainer/TabContainer/Options/Panel3/VBoxContainer2/HSplitContainer2/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 416.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="RestartButton" type="Button" parent="MarginContainer/TabContainer/Options/Panel3/VBoxContainer2/HSplitContainer2/MarginContainer/LeftSide"]
margin_right = 396.0
margin_bottom = 29.0
text = "New Game"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/TabContainer/Options/Panel3/VBoxContainer2/HSplitContainer2"]
margin_left = 448.0
margin_right = 884.0
margin_bottom = 69.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="RightSide" type="VBoxContainer" parent="MarginContainer/TabContainer/Options/Panel3/VBoxContainer2/HSplitContainer2/MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 416.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="QuitButton" type="Button" parent="MarginContainer/TabContainer/Options/Panel3/VBoxContainer2/HSplitContainer2/MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 416.0
margin_bottom = 49.0
text = "Quit"

[node name="ColorRect" type="ColorRect" parent="MarginContainer/TabContainer/Options"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.501961, 0.501961, 0.501961, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlideNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -29.823

[node name="ClickNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -29.823

[connection signal="tab_changed" from="MarginContainer/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="MarginContainer/TabContainer/Start/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/Start/MarginContainer/VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/Start/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="meta_clicked" from="MarginContainer/TabContainer/Licenses/MarginContainer/VBoxContainer/Authoring" to="." method="_on_RichText_meta_clicked"]
[connection signal="pressed" from="MarginContainer/TabContainer/Options/Panel3/VBoxContainer2/HSplitContainer2/MarginContainer/LeftSide/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/Options/Panel3/VBoxContainer2/HSplitContainer2/MarginContainer2/QuitButton" to="." method="_on_QuitButton_pressed"]
